--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
